--- a/app/src/main/resources/templates/bookmarks.html
+++ b/app/src/main/resources/templates/bookmarks.html
@@ -31,71 +31,71 @@
                                         <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M3 12h18m-6-6 6 6-6 6"></path>
                                     </svg>
                                 </a>
-                            <!-- My Profile -->
-                            <a href="/profile" class="flex items-center space-x-2">
-                                <p>My Profile</p>
-                                <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 14c3.3 0 6 2.7 6 6H6c0-3.3 2.7-6 6-6zm0-10a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"></path>
-                                </svg>
-                            </a>
-                            <a class="messages" href="/messages">
-                                <p>Messages</p>
-                                <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M3 12h18m-6-6 6 6-6 6"></path>
-                                </svg>
-                            </a>
-                            <!-- Notifications -->
-                            <a href="/notifications" class="flex items-center space-x-2">
-                                <p>Notifications</p>
-                                <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 22s4-2 4-6V9a4 4 0 0 0-8 0v7c0 4 4 6 4 6z"></path>
-                                </svg>
-                            </a>
+                                <!-- My Profile -->
+                                <a href="/profile" class="flex items-center space-x-2">
+                                    <p>My Profile</p>
+                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 14c3.3 0 6 2.7 6 6H6c0-3.3 2.7-6 6-6zm0-10a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"></path>
+                                    </svg>
+                                </a>
+                                <a class="messages" href="/messages">
+                                    <p>Messages</p>
+                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M3 12h18m-6-6 6 6-6 6"></path>
+                                    </svg>
+                                </a>
+                                <!-- Notifications -->
+                                <a href="/notifications" class="flex items-center space-x-2">
+                                    <p>Notifications</p>
+                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 22s4-2 4-6V9a4 4 0 0 0-8 0v7c0 4 4 6 4 6z"></path>
+                                    </svg>
+                                </a>
 
-                            <!-- Followers/Following -->
-                            <a href="/followers" class="flex items-center space-x-2">
-                                <p>Followers / Following</p>
-                                <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M5 21v-4a4 4 0 1 1 8 0v4m4 0v-4a4 4 0 1 1 8 0v4M9 7a4 4 0 1 1 8 0 4 4 0 0 1-8 0z"></path>
-                                </svg>
-                            </a>
-                            <a href="/recipes">
-                                <p>MyRecipes</p>
-                                <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M3 12h18M9 6l6 6-6 6"></path>
-                                </svg>
-                            </a>
-                            <a href="/admin">
-                                <p>Admin Panel</p>
-                                <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M6 12h12m-6-6 6 6-6 6"></path>
-                                </svg>
-                            </a>
-                        </div>
+                                <!-- Followers/Following -->
+                                <a href="/followers" class="flex items-center space-x-2">
+                                    <p>Followers / Following</p>
+                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M5 21v-4a4 4 0 1 1 8 0v4m4 0v-4a4 4 0 1 1 8 0v4M9 7a4 4 0 1 1 8 0 4 4 0 0 1-8 0z"></path>
+                                    </svg>
+                                </a>
+                                <a href="/recipes">
+                                    <p>MyRecipes</p>
+                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M3 12h18M9 6l6 6-6 6"></path>
+                                    </svg>
+                                </a>
+                                <a href="/admin">
+                                    <p>Admin Panel</p>
+                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M6 12h12m-6-6 6 6-6 6"></path>
+                                    </svg>
+                                </a>
+                            </div>
 
-                        <!-- Other Quick Links -->
-                        <div class="func-block">
-                            <span>Quick Links</span>
-                            <a href="/new-recipe">
-                                <p>Add Recipe</p>
-                                <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 6v12m6-6H6"></path>
-                                </svg>
-                            </a>
-                        </div>
+                            <!-- Other Quick Links -->
+                            <div class="func-block">
+                                <span>Quick Links</span>
+                                <a href="/new-recipe">
+                                    <p>Add Recipe</p>
+                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 6v12m6-6H6"></path>
+                                    </svg>
+                                </a>
+                            </div>
 
-                        <!-- Logout -->
-                        <div class="func-block">
-                            <a class="logout" href="/logout">
-                                <p>Logout</p>
-                                <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 17l4-4-4-4M20 12H8"></path>
-                                </svg>
-                            </a>
+                            <!-- Logout -->
+                            <div class="func-block">
+                                <a class="logout" href="/logout">
+                                    <p>Logout</p>
+                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 17l4-4-4-4M20 12H8"></path>
+                                    </svg>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
             </div>
         </nav>
 
@@ -126,11 +126,10 @@
     <div class="col-12 text-center">
         <div class="alert alert-info">
             <h4 class="alert-heading">No Bookmarked Recipes</h4>
-            <p>It looks like you haven't bookmarked any recipes yet. Start saving your favorite recipes now!</p>
+            <p>It looks like you haven't bookmarked any recipes yet. Start saving your favourite recipes now!</p>
             <hr>
-            <p class="mb-0">Click on the heart ❤️ icon next to a recipe to bookmark it.</p>
+            <p class="mb-0">Click on the heart 📌 icon next to your favourite recipe to bookmark it.</p>
         </div>
-        <img src="path/to/empty-bookmark-icon.svg" alt="Empty bookmark icon" class="empty-bookmark-icon mt-4">
     </div>
 </div>
 
