Making chat logic more easy

--- a/app/src/main/resources/templates/home.html
+++ b/app/src/main/resources/templates/home.html
@@ -38,7 +38,7 @@
                                     <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 14c3.3 0 6 2.7 6 6H6c0-3.3 2.7-6 6-6zm0-10a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"></path>
                                 </svg>
                             </a>
-                            <a class="messages" href="/api/messages">
+                            <a class="messages" href="/messages/send">
                                 <p>Messages</p>
                                 <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                     <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 16c0 1.1.9 2 2 2h3v3l4-3h7c1.1 0 1.99-.9 1.99-2L22 4c0-1.1-.9-2-2-2z"></path>
@@ -53,7 +53,7 @@
                             </a>
 
                             <!-- Followers/Following -->
-                            <a href="/api/followers" class="flex items-center space-x-2">
+                            <a href="/followers" class="flex items-center space-x-2">
                                 <p>Followers / Following</p>
                                 <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                     <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M5 21v-4a4 4 0 1 1 8 0v4m4 0v-4a4 4 0 1 1 8 0v4M9 7a4 4 0 1 1 8 0 4 4 0 0 1-8 0z"></path>
@@ -108,7 +108,7 @@
     <div th:if="${#lists.isEmpty(posts)}">
         <section class="welcome-card">
             <div class="welcome-image">
-                <img src="/image/Welcome.jpg" alt="Welcome Image">
+                <img src="/image/Welcome-2.jpg" alt="Welcome Image">
             </div>
             <h1>Welcome to Morsel - Our Beautiful Recipe App!</h1>
             <p>Step into a world brimming with endless culinary possibilities, where every recipe is crafted with love by home cooks just like you. Whether you're looking to quickly whip up a comforting dish, try something adventurous and bold, or impress your friends and family with a new creation, we've got a recipe that will spark your taste buds and inspire your kitchen creativity.</p>
