--- a/app/src/main/resources/templates/admin-reports.html
+++ b/app/src/main/resources/templates/admin-reports.html
@@ -105,7 +105,7 @@
 <main>
 
     <div class="home-section">
-        <div class="single-section-box subscriptions-container">
+        <div class="single-section-box users-container">
             <table class="styled-table">
                 <thead>
                 <tr>
@@ -120,23 +120,24 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="singleUser : ${users}">
-                    <td th:text="${singleUser.id}">[id]</td>
-                    <td th:text="${singleUser.username}">[username]</td>
-                    <td th:text="${#strings.isEmpty(singleUser.email) ? 'no email' : singleUser.email}">[email]</td>
-                    <td th:text="${#strings.capitalize(#strings.toLowerCase(singleUser.role))}">[role]</td>
+                <tr th:each="curentUser : ${users}">
+                    <td th:text="${curentUser.id}"></td>
+                    <td th:text="${curentUser.username}"></td>
+                    <td th:text="${#strings.isEmpty(curentUser.email) ? 'no email' : curentUser.email}"></td>
+                    <td th:text="${#strings.capitalize(#strings.toLowerCase(curentUser.role.name()))}"></td>
+                    <td th:text="${#strings.capitalize(#strings.toLowerCase(curentUser.country.name()))}"></td>
                     <td>
-                        <p th:if="${singleUser.isActive}" class="status active" th:text="Active"></p>
-                        <p th:if="${!singleUser.isActive}" class="status terminated" th:text="Inactive"></p>
+                        <p th:if="${curentUser.active}" class="status active">Active</p>
+                        <p th:unless="${curentUser.active}" class="status terminated">Inactive</p>
                     </td>
-                    <td th:text="${#temporals.format(singleUser.createdOn, 'dd MMM yyyy HH:mm')}">[date]</td>
+                    <td th:text="${#temporals.format(curentUser.createdOn, 'dd MMM YYYY HH:mm')}"></td>
                     <td>
-                      <form th:action="@{'/users/' + ${singleUser.id} + '/status'}" th:method="PUT">
+                        <form th:action="@{'/users/' + ${curentUser.id} + '/status'}" th:method="PUT">
                             <button class="profile-actions-button">
-                                <p>Switch</p>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-toggle-on"
-                                     viewBox="0 0 16 16">
-                                    <path d="M5 3a5 5 0 0 0 0 10h6a5 5 0 0 0 0-10zm6 9a4 4 0 1 1 0-8 4 4 0 0 1 0 8"/>
+                                <p>Status</p>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                                     class="bi bi-toggle-on" viewBox="0 0 16 16">
+                                    <path d="M5 3a5 5 0 0 0 0 10h6a5 5 0 0 0 0-10zm6 9a4 4 0 1 1 0-8 4 4 0 0 1 0 8"></path>
                                 </svg>
                             </button>
                         </form>
