--- a/app/src/main/resources/templates/inbox.html
+++ b/app/src/main/resources/templates/inbox.html
@@ -2,14 +2,24 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Inbox</title>
+    <link rel="stylesheet" th:href="@{/css/inbox.css}">
 </head>
 <body>
-<h1>Inbox for <span th:text="${username}"></span></h1>
-<ul>
-    <li th:each="message : ${messages}">
-        <strong th:text="${message.sender}"></strong>:
-        <span th:text="${message.content}"></span>
-    </li>
-</ul>
+
+<nav>
+    <a th:href="@{'/messages/history/' + ${username}}">Chat History</a>
+</nav>
+
+<div class="container">
+    <h1>Inbox for <span th:text="${username}"></span></h1>
+
+    <ul>
+        <li th:each="message : ${messages}">
+            <strong th:text="${message.sender}"></strong>:
+            <span th:text="${message.content}"></span>
+        </li>
+    </ul>
+</div>
+
 </body>
 </html>
