--- a/app/src/main/resources/templates/send_message_form.html
+++ b/app/src/main/resources/templates/send_message_form.html
@@ -2,18 +2,27 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Send Message</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" th:href="@{/css/send_message.css}">
 </head>
 <body>
-<h1>Send a Message</h1>
 
-<form action="/messages/send" method="post">
-    <label>Sender: <input type="text" name="sender" required></label>
-    <label>Receiver: <input type="text" name="receiver" required></label>
-    <label>Message: <textarea name="content" required></textarea></label>
-    <button type="submit">Send</button>
-</form>
+<nav>
+    <a th:href="@{'/messages/inbox/' + ${sender}}">Inbox</a> |
+    <a th:href="@{'/messages/history/' + ${sender}}">Chat History</a>
+</nav>
 
-<p><a href="/messages/history" th:href="@{/messages/history/{username}(username=${sender})}">View Chat History</a></p>
+<div class="container">
+    <h1>Send a Message</h1>
+
+    <form action="/messages/send" method="post">
+        <label>Sender: <input type="text" name="sender" th:value="${sender}" required readonly></label>
+        <label>Receiver: <input type="text" name="receiver" required placeholder="Enter recipient's username"></label>
+        <label>Message: <textarea name="content" required placeholder="Type your message..."></textarea></label>
+        <button type="submit">Send</button>
+    </form>
+
+    <p><a th:href="@{'/messages/history/' + ${sender}}">View Chat History</a></p>
+</div>
+
 </body>
 </html>
