--- a/app/src/main/resources/templates/home.html
+++ b/app/src/main/resources/templates/home.html
@@ -60,7 +60,7 @@
                                 </svg>
                             </a>
                             <a href="/posts">
-                                <p>MyRecipes</p>
+                                <p>My Posts</p>
                                 <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                     <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M4 3h16c1.1 0 1.99.9 1.99 2L22 19c0 1.1-.9 2-2 2H4c-1.1 0-1.99-.9-1.99-2L2 5c0-1.1.9-2 2-2zM12 8h4v4h-4z"></path>
                                 </svg>
